src/objects/Sales_History__c.object
<CustomObject>
    <description>Detailed Sales History of Products Sold to Accounts</description>
    <fields>
        <fullName>ATL_Abut_Implant_Manufacturer_Grouped__c</fullName>
        <description>Groups ATL Implant Manufacturer into DI Implant Systems and Competitive Implant Systems.</description>
        <formula>CASE( Implant_system__c , 
&quot;BioHorizons&quot;, &quot;Comp System&quot;,
&quot;Osstem&quot;, &quot;Comp System&quot;, 
&quot;Biomet 3i&quot;, &quot;Comp System&quot;, 
&quot;Camlog&quot;, &quot;Comp System&quot;, 
&quot;Keystone Dental&quot;, &quot;Comp System&quot;, 
&quot;Mis&quot;, &quot;Comp System&quot;,
&quot;Nobel Biocare&quot;, &quot;Comp System&quot;, 
&quot;Straumann&quot;, &quot;Comp System&quot;, 
&quot;Sybron Implant Solutions&quot;, &quot;Comp System&quot;, 
&quot;Zimmer Dental&quot;, &quot;Comp System&quot;, 
&quot;Ankylos (D)&quot;, &quot;DI System&quot;, 
&quot;Astra Tech (D)&quot;, &quot;DI System&quot;, 
&quot;XiVE/Frialit (D)&quot;, &quot;DI System&quot;,
&quot;Astra Tech Implant System EV&quot;, &quot;DI System&quot;,
&quot;Astra Tech TX&quot;, &quot;DI System&quot;, 
 &quot;N/A&quot; 
)</formula>
        <inlineHelpText>Groups ATL Implant Manufacturer into DI Implant Systems and Competitive Implant Systems.</inlineHelpText>
        <label>ATL Abut Implant Manufacturer Grouped</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWO_Case_No_D__c</fullName>
        <description>This fields shows the EXPECTED AWO-case number. This fields is created from the Order number on ALL Atlantis sales, which means that it can be created from sales not entered in AWO.</description>
        <formula>IF(AND(BEGINS(Product_Group_2__c, &quot;ID2&quot;) ,NOT( ISNULL( Order_Number__c ) )) , MID( Order_Number__c , 4,  LEN( Order_Number__c ) -3) , NULL)</formula>
        <inlineHelpText>This fields shows the EXPECTED AWO-case number. This fields is created from the Order number on ALL Atlantis sales, which means that it can be created from sales not entered in AWO.</inlineHelpText>
        <label>AWO Case No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWO_Link__c</fullName>
        <description>Opens the Order in AWO</description>
        <formula>IF( ISNUMBER( Our_Reference__c ), HYPERLINK(&quot;https://www.atlantisweborder.com/orders/show/&quot;&amp; Our_Reference__c,   AWO_Case_No_D__c  ), NULL)</formula>
        <inlineHelpText>Opens the Order in AWO</inlineHelpText>
        <label>AWO-Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abutment_Implant_System__c</fullName>
        <formula>IF (CONTAINS(Product__r.RecordType.DeveloperName, &quot;Global&quot;) ,IF(
Product__r.PG2_Code__c =&quot;ID21&quot; ||Product__r.PG2_Code__c =&quot;ID22&quot; || Product__r.PG2_Code__c =&quot;ID23&quot;, 
/* checks if this is Atlantis */  

CASE( Implant_system__c, 
&quot;Dentsply Friadent&quot;, LEFT( Atlantis_Interface_D__c , FIND( &quot; &quot;, Atlantis_Interface_D__c)),
&quot;Astra Tech&quot;, &quot;Astra Tech Implant System&quot;,
&quot;Astra Tech (D)&quot;,&quot;Astra Tech Implant System&quot;,
&quot;Ankylos (D)&quot;,&quot;Ankylos&quot;,
&quot;XiVE/Frialit (D)&quot;,&quot;XiVE&quot;,
Implant_system__c) ,
/* If Atlantis, check if manufacturer is Friadent and add the first word in the implant interface (Ankylos, Frialit, XiVe). if Astra Tech, change to Astra Tech Implant System to match Implant brand, other - add implant manufacturer */ 

IF(Product__r.PG2_Code__c =&quot;II12&quot;, Brand__c ,&quot;&quot;) ) 
/*If not Atlantis check if Stock Abutments. If so Add Brand, if not leave blank */
 , 
 IF(

Product__r.GlobalSKUMapping__r.PG2_Code__c =&quot;ID21&quot; ||Product__r.GlobalSKUMapping__r.PG2_Code__c =&quot;ID22&quot; || Product__r.GlobalSKUMapping__r.PG2_Code__c =&quot;ID23&quot;, 
/* checks if this is Atlantis */  

CASE( Implant_system__c, 
&quot;Dentsply Friadent&quot;, LEFT( Atlantis_Interface_D__c , FIND( &quot; &quot;, Atlantis_Interface_D__c)),
&quot;Astra Tech&quot;, &quot;Astra Tech Implant System&quot;,
&quot;Astra Tech (D)&quot;,&quot;Astra Tech Implant System&quot;,
&quot;Ankylos (D)&quot;,&quot;Ankylos&quot;,
&quot;XiVE/Frialit (D)&quot;,&quot;XiVE&quot;,
Implant_system__c) ,
/* If Atlantis, check if manufacturer is Friadent and add the first word in the implant interface (Ankylos, Frialit, XiVe). if Astra Tech, change to Astra Tech Implant System to match Implant brand, other - add implant manufacturer */ 

IF(Product__r.GlobalSKUMapping__r.PG2_Code__c =&quot;II12&quot;, Brand__c ,&quot;&quot;) ) )
/*If not Atlantis check if Stock Abutments. If so Add Brand, if not leave blank */</formula>
        <label>Abutment Implant System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Account_No__c</fullName>
        <description>The current ERP number of this customer concatenated with the country code.</description>
        <externalId>true</externalId>
        <inlineHelpText>The current ERP number of this customer concatenated with the country code.</inlineHelpText>
        <label>ERP Number From Integration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account__r.Owner.FirstName&amp;&quot; &quot;&amp;Account__r.Owner.LastName</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales History</relationshipLabel>
        <relationshipName>SalesHistory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Article_Description__c</fullName>
        <description>Use Product field instead!</description>
        <inlineHelpText>Use Product field instead!</inlineHelpText>
        <label>Article Description OLD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article__c</fullName>
        <description>Article (SKU) + Product name</description>
        <formula>Name  &amp; &quot; &quot;  &amp;  Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Article (SKU) + Product name</inlineHelpText>
        <label>Article &amp; Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Atlantis_Interface_D__c</fullName>
        <description>This field shows Attr 4 (Implant type) for the Atlantis abutment</description>
        <inlineHelpText>This field shows Attr 4 (Implant type) for the Atlantis abutment</inlineHelpText>
        <label>ATLANTIS Interface</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Atlantis_Scanner_Brand_D__c</fullName>
        <description>This field is integrated with Atlantis Attrb 5 (Scanner ID)</description>
        <inlineHelpText>This field is integrated with Atlantis Attrb 5 (Scanner ID)</inlineHelpText>
        <label>ATL Scanner Brand</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Limited to Products that has a brand definition in Movex, otherwise N/A</description>
        <formula>IF(CONTAINS(Product__r.RecordType.DeveloperName, &quot;Local&quot;),
Product__r.GlobalSKUMapping__r.Brand__c,
Product__r.Brand__c)</formula>
        <inlineHelpText>Limited to Products that has a brand definition in Movex, otherwise N/A</inlineHelpText>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area_Code_TEXT_HQ__c</fullName>
        <description>Used to be able to build RUS-field on Business Area Code. To be updated either by workflow, by integration or by an APEX-trigger. Used for EV Launch.</description>
        <label>Business Area Code TEXT (HQ)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area_Code__c</fullName>
        <description>Limited to Products that has a definition in Movex, otherwise N/A</description>
        <formula>IF (CONTAINS(Product__r.RecordType.DeveloperName, &quot;Local&quot;), Product__r.GlobalSKUMapping__r.Business_Area_Code__c, Product__r.Business_Area_Code__c)</formula>
        <inlineHelpText>Limited to Products that has a definition in Movex, otherwise N/A</inlineHelpText>
        <label>Business Area Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <description>This field is integrated from Movex field &apos;Campaign Code&apos; (Stat.1.Code). In Movex, a value is set on the Invoice level, which means that all invoice lines/ Sales history records with the corresponding invoice number always contain this code.</description>
        <inlineHelpText>If this field contains information the sales comes from a specific campaign or congress like EAO.</inlineHelpText>
        <label>Campaign Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Product_4__c</fullName>
        <formula>IF(CONTAINS(Product__r.RecordType.DeveloperName, &quot;Local&quot;), 
If( Product__r.GlobalSKUMapping__r.PG4_Code__c =  Product_Group_HQ__c ,&quot;Yes&quot;,&quot;No&quot;), 
If( Product__r.PG4_Code__c =  Product_Group_HQ__c ,&quot;Yes&quot;,&quot;No&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Product 4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continent__c</fullName>
        <formula>CASE (Country_Code__c, &quot;US&quot;, &quot;North America&quot;, &quot;CA&quot;, &quot;North America&quot;, &quot;AU&quot;, &quot;Asia/Pacific&quot;, &quot;NZ&quot; , &quot;Asia/Pacific&quot;, &quot;JP&quot;, &quot;Asia/Pacific&quot;, &quot;Europe&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Continent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the Corresponding Purchasing Contract or Voucher when a relation exists</description>
        <inlineHelpText>Lookup field to the Corresponding Purchasing Contract or Voucher when a relation exists</inlineHelpText>
        <label>Contract/Voucher</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Sales History</relationshipLabel>
        <relationshipName>Sales_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <formula>LEFT( Account_Account_No__c , 2)</formula>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Order_Number__c</fullName>
        <description>This is the customer&apos; order number.</description>
        <inlineHelpText>This is the customer&apos; order number.</inlineHelpText>
        <label>Customer Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_to_reach_Expiry_HQ__c</fullName>
        <description>To calculate the number days left before the expiration date.</description>
        <formula>IF ( ISBLANK(Maintenance_Expiry_Date__c) &amp;&amp; ISBLANK(Voucher_Expiry_Date__c),NULL, Case ( SIMPLANT_Sales_Category_HQ__c ,&quot;Maintenance&quot;, Maintenance_Expiry_Date__c - TODAY(), &quot;Vouchers&quot;,  Voucher_Expiry_Date__c - TODAY(),NULL))</formula>
        <label>Days to reach Expiry (HQ)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <inlineHelpText>Already subtracted from the Total Value (Tot Price)</inlineHelpText>
        <label>Discount Amount</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Model__c</fullName>
        <label>Discount Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Archive__c</fullName>
        <description>View invoice in Document Archive (within Dentsply domain or via VPN only)</description>
        <formula>/* HYPERLINK(&quot;http://a3.astratech.net/a3DirectStart.asp?COMPONENT=OpenCollector_Invoice_0_Collector&amp;view=A&amp;selectionbox_Invoiceno=&quot;  &amp; Invoice_Number__c  &amp; &quot;&amp;selectionbox_Orderno=&quot; &amp;  Order_Number__c &amp;&quot;&amp;View=A&quot;, &quot;View invoice&quot;,&quot;_blank&quot;)*/

HYPERLINK(&quot;http://a3.astratech.net/a3DirectStart.asp?COMPONENT=OpenCollector_Invoice_0_Collector&quot; &amp;

IF( (Country_Code__c =&apos;DE&apos;|| Country_Code__c =&apos;US&apos;||Country_Code__c =&apos;PL&apos;||Country_Code__c =&apos;CA&apos; )&amp;&amp;Value(Invoice_Year__c)&gt;=2017,&apos;2017&apos;,&apos;&apos;) &amp;



&quot;&amp;view=A&amp;selectionbox_Orderno=&quot; &amp;

Order_Number__c &amp;


&quot;&amp;selectionbox_Division=&quot; &amp;

IF( (Country_Code__c &lt;&gt;&apos;DE&apos; &amp;&amp; Country_Code__c &lt;&gt;&apos;US&apos;&amp;&amp; Country_Code__c &lt;&gt;&apos;CA&apos; ),&apos;&apos;,Country_Code__c) &amp;


&quot;&amp;selectionbox_Invoiceno=&quot; &amp;

IF( (Country_Code__c &lt;&gt;&apos;DE&apos; &amp;&amp; Country_Code__c &lt;&gt;&apos;US&apos; &amp;&amp; Country_Code__c &lt;&gt;&apos;PL&apos; &amp;&amp; Country_Code__c &lt;&gt;&apos;CA&apos; ),&apos;&apos;,Invoice_Number__c) &amp;


&quot;&amp;view=A&quot;
,

 $Label.View_Invoice 

,

&quot;_blank&quot;
)</formula>
        <inlineHelpText>View invoice in Document Archive (within Dentsply domain or via VPN only)</inlineHelpText>
        <label>Document Archive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Date_Field_HQ__c</fullName>
        <inlineHelpText>Field to be used when needing to update all Invoice Lines to for example have a trigger to fire. Not used in any reports and not visible to any users except System Admins</inlineHelpText>
        <label>Dummy Date Field (HQ)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ERP_Number__c</fullName>
        <formula>Account__r.Movex__c</formula>
        <label>ERP Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Prod__c</fullName>
        <formula>IF (Price__c  = 0 , &quot;Free Prod&quot;, &quot;Invoiced&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Free Prod</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDWUniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>GDW Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GlobalSKU_From_Source_HQ__c</fullName>
        <description>The mapped GlobalSKU in the sales line. To use this field to compare our mapping in the Product Object.</description>
        <label>GlobalSKU From Source (HQ)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Brand_Code__c</fullName>
        <formula>Product__r.GlobalSKUMapping__r.BrandCodeGDW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Brand_Description__c</fullName>
        <formula>Product__r.GlobalSKUMapping__r.BrandDescGDW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Brand Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_SKU_From_Salesline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The GlobalSKU written on the Invoiceline.</description>
        <inlineHelpText>The GlobalSKU written on the Invoiceline.</inlineHelpText>
        <label>Global SKU From Salesline</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales History (Global SKU From Salesline)</relationshipLabel>
        <relationshipName>Sales_History1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gross_price__c</fullName>
        <formula>IF(Quantity__c=0, 0, Product__r.List_Price__c*Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total gross price = Quantity multiplied by the List Price on the Local SKU</inlineHelpText>
        <label>Gross price (currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guide_Payment_Method_Front__c</fullName>
        <description>Shows if the surgical guide is paid by  voucher or regular billing.</description>
        <formula>Case ( Guide_Payment_Method__c , &quot;1&quot;,&quot;Voucher&quot;,&quot;0&quot;,&quot;Regular&quot;,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows if the surgical guide is paid by  voucher or regular billing.</inlineHelpText>
        <label>Guide Payment Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guide_Payment_Method__c</fullName>
        <description>Linked to Movex attribute 5</description>
        <label>Guide Payment Method (HQ)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISUS_Prostheses__c</fullName>
        <description>We can&apos;t use Product Category in Roll ups because it refers to another object, so this field use the Product Group fields to give Yes or No</description>
        <formula>CASE(LEFT(Product_Group_HQ__c, 4) ,
&quot;ID42&quot;, &quot;Yes&quot;,
&quot;ID41&quot;,&quot;Yes&quot;,
&quot;ID43&quot;,&quot;Yes&quot;,
&quot;ID44&quot;,&quot;Yes&quot;,
&quot;No&quot;)

/* OLD formula

CASE(Product_Group_2__c,&quot;ID42 ISUS Bridge&quot;, &quot;Yes&quot;,&quot;ID41 ISUS Bar&quot;,&quot;Yes&quot;,&quot;ID43 ISUS Hybrid&quot;,&quot;Yes&quot;,&quot;ID44 ISUS 2in1&quot;,&quot;Yes&quot;,&quot;No&quot;)

*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISUS Prostheses?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implant_Connections__c</fullName>
        <description>Similar to existing field!</description>
        <formula>IF(CONTAINS(Product__r.RecordType.DeveloperName, &quot;Local&quot;), 
IF( Product__r.GlobalSKUMapping__r.PG1_Code__c = &quot;ID4&quot; &amp;&amp; CONTAINS(Name, &quot;-&quot;), VALUE(RIGHT( Name , LEN(TRIM(Name))-FIND(&quot;-&quot;, Name) )) , null), 
IF( Product__r.PG1_Code__c = &quot;ID4&quot; &amp;&amp; CONTAINS(Name, &quot;-&quot;), VALUE(RIGHT( Name , LEN(TRIM(Name))-FIND(&quot;-&quot;, Name) )) , null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implant Connections</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implant_system__c</fullName>
        <label>ATL Implant Manufacturer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implants_Qty__c</fullName>
        <description>Used by Benelux to calculate the quantity only for implants but to include all the items in the value</description>
        <formula>IF( Product_Category__c =&quot;Implants&quot;,  Quantity__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implants Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Order_for_analysis_only__c</fullName>
        <description>For analysis only, should not appear in any page layouts or search criterias if you are not a System administrator. The number 1 should appear if the order type is marked as an internal order type, else 0</description>
        <formula>IF(AND
( OR
  (CONTAINS
   ( Order_Type__c, &quot;7&quot;
   ),CONTAINS
   ( Order_Type__c, &quot;8&quot;
   ),CONTAINS
   ( Order_Type__c, &quot;9&quot;
   ),CONTAINS
   ( Order_Type__c, &quot;F&quot;
   ),CONTAINS
   ( Order_Type__c, &quot;P&quot;
   ),CONTAINS
   ( Order_Type__c, &quot;Q&quot;
   ),CONTAINS
   ( Order_Type__c, &quot;R&quot;
   ),CONTAINS
   ( Order_Type__c, &quot;S&quot;
   ),CONTAINS
   ( Order_Type__c, &quot;T&quot;
   ),CONTAINS
   ( Order_Type__c, &quot;SQZ&quot;
   ),CONTAINS
   ( Order_Type__c, &quot;SQG&quot;
   )
  ),  

NOT
  ( OR
   ( CONTAINS
    (Order_Type__c, &quot;0&quot;
    ),CONTAINS
    (Order_Type__c, &quot;1&quot;
    ),CONTAINS
    (Order_Type__c, &quot;2&quot;
    ),CONTAINS
    (Order_Type__c, &quot;3&quot;
    ),CONTAINS
    (Order_Type__c, &quot;4&quot;
    )
   )
  ) 
,OR(Order_Type__c=&quot;AUR&quot;,Order_Type__c=&quot;ES8&quot;,Order_Type__c=&quot;ES9&quot;,Order_Type__c=&quot;ESR&quot;,Order_Type__c=&quot;GB7&quot;,Order_Type__c=&quot;GB9&quot;,Order_Type__c=&quot;GBR&quot;,Order_Type__c=&quot;GBT&quot;,Order_Type__c=&quot;NL7&quot;,Order_Type__c=&quot;NL8&quot;,Order_Type__c=&quot;NLR&quot;,Order_Type__c=&quot;NO8&quot;,Order_Type__c=&quot;NO9&quot;,Order_Type__c=&quot;NOS&quot;,Order_Type__c=&quot;NOT&quot;,Order_Type__c=&quot;PL7&quot;,Order_Type__c=&quot;PLR&quot;,Order_Type__c=&quot;PLS&quot;,Order_Type__c=&quot;PT8&quot;,Order_Type__c=&quot;SE7&quot;,Order_Type__c=&quot;SE8&quot;,Order_Type__c=&quot;SE9&quot;,Order_Type__c=&quot;SER&quot;,Order_Type__c=&quot;US7&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For analysis only, should not appear in any page layouts or search criterias if you are not a System administrator. The number 1 should appear if the order type is marked as an internal order type, else 0</inlineHelpText>
        <label>Internal Order? (for analysis only)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Date1Y__c</fullName>
        <description>The Invoice date -1 year. Used in analytics (like one-click reports)</description>
        <formula>Invoice_Date__c -365</formula>
        <inlineHelpText>The Invoice date -1 year. Used in analytics (like one-click reports)</inlineHelpText>
        <label>Invoice Date -1Y</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Date_1Y__c</fullName>
        <description>The invoice date plus one year. Used for comparision of YTD and LYTD sales figures. For analysis only</description>
        <formula>Invoice_Date__c +365</formula>
        <inlineHelpText>The invoice date plus one year. Used for comparision of YTD and LYTD sales figures. For analysis only</inlineHelpText>
        <label>Invoice Date +1Y</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Month_1_HQ__c</fullName>
        <description>Used by France https://emea.salesforce.com/00O20000006geE0</description>
        <formula>IF (Month( Invoice_Date__c )= Month (Today()),&quot;This Month&quot;,NUll)</formula>
        <label>Same Current Month? (HQ)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Month__c</fullName>
        <formula>IF ((MONTH ( Invoice_Date__c  ) = 1 ) , &quot;01 Jan&quot;,
IF ((MONTH ( Invoice_Date__c  ) = 2 ) , &quot;02 Feb&quot;,
IF ((MONTH ( Invoice_Date__c  ) = 3 ) , &quot;03 Mar&quot;,
IF ((MONTH ( Invoice_Date__c  ) = 4 ) , &quot;04 Apr&quot;,
IF ((MONTH ( Invoice_Date__c  ) = 5 ) , &quot;05 May&quot;,
IF ((MONTH ( Invoice_Date__c  ) = 6 ) , &quot;06 Jun&quot;,
IF ((MONTH ( Invoice_Date__c  ) = 7 ) , &quot;07 Jul&quot;,
IF ((MONTH ( Invoice_Date__c  ) = 8 ) , &quot;08 Aug&quot;,
IF ((MONTH ( Invoice_Date__c  ) = 9 ) , &quot;09 Sep&quot;,
IF ((MONTH ( Invoice_Date__c  ) = 10 ) , &quot;10 Oct&quot;,
IF ((MONTH ( Invoice_Date__c  ) = 11 ) , &quot;11 Nov&quot;,
IF ((MONTH ( Invoice_Date__c  ) = 12 ) , &quot;12 Dec&quot;, &quot; &quot;))))))))))))</formula>
        <label>Invoice Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Quarter_Year__c</fullName>
        <description>The Quarter+Year when the Invoice is placed. For analysis</description>
        <formula>Invoice_Quarter__c &amp;&quot;/&quot;&amp; Invoice_Year__c</formula>
        <inlineHelpText>The Quarter+Year when the Invoice is placed. For analysis</inlineHelpText>
        <label>Invoice Quarter+Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Quarter__c</fullName>
        <formula>CASE( MONTH( Invoice_Date__c ) , 
1, &quot;Q1&quot;, 
2, &quot;Q1&quot;, 
3, &quot;Q1&quot;, 
4, &quot;Q2&quot;, 
5, &quot;Q2&quot;,
6, &quot;Q2&quot;, 
7, &quot;Q3&quot;,
8, &quot;Q3&quot;, 
9, &quot;Q3&quot;, 
10, &quot;Q4&quot;,
11, &quot;Q4&quot;, 
12, &quot;Q4&quot;, 
null)</formula>
        <label>Invoice Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Year__c</fullName>
        <description>The Year when the Invoice is placed. For analysis</description>
        <formula>TEXT(YEAR( Invoice_Date__c ))</formula>
        <inlineHelpText>The Year when the Invoice is placed. For analysis</inlineHelpText>
        <label>Invoice Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Year_numeric__c</fullName>
        <description>Only used in calculations - should not appear in any page layouts etc</description>
        <formula>VALUE( Invoice_Year__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only used in calculations - should not appear in any page layouts etc</inlineHelpText>
        <label>Invoice Year (numeric)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsWonLost_Abutments__c</fullName>
        <formula>IF(NOT(ISNULL(Invoice_Date__c)) &amp;&amp; NOT(ISNULL(Product__c)) &amp;&amp; NOT(ISNULL(Quantity__c)) &amp;&amp; BEGINS(Product_Group_HQ__c, &quot;ID21&quot;), &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>For Won/Lost (Abuts)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsWonLost_ISUS__c</fullName>
        <formula>IF(
NOT(ISNULL(Invoice_Date__c)) &amp;&amp;
NOT(ISNULL(Product__c)) &amp;&amp;
NOT(ISNULL(Quantity__c)) &amp;&amp;
(
  BEGINS(Product_Group_HQ__c, &quot;ID41&quot;) ||
  BEGINS(Product_Group_HQ__c, &quot;ID42&quot;) ||
  BEGINS(Product_Group_HQ__c, &quot;ID43&quot;) ||
  BEGINS(Product_Group_HQ__c, &quot;ID44&quot;)
), &quot;Yes&quot;, &quot;No&quot;)</formula>
        <label>For Won/Lost (ISUS)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsWonLost_Implants__c</fullName>
        <formula>IF(NOT(ISNULL(Invoice_Date__c)) &amp;&amp; NOT(ISNULL(Product__c)) &amp;&amp; NOT(ISNULL(Quantity__c)) &amp;&amp; BEGINS(Product_Group_HQ__c, &quot;II11&quot;), &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>For Won/Lost (Implants)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_Referral_Postal_Code__c</fullName>
        <description>Shows the clinical postal code that has been referred from the Atlantis Web Order system. The formula is copying the Project Element field, but only for Atlantis sales for AWO-customers</description>
        <formula>IF( Account__r.Atlantis_Web_Order_Customer__c = TRUE  &amp;&amp;  (Product_Group_1__c = &quot;ID2 Atlantis&quot; || Product_Group_1__c = &quot;ID4 ATLANTIS ISUS&quot; ),  Postal_Code_D_NA__c , null)</formula>
        <inlineHelpText>Shows the clinical postal code that has been referred from the Atlantis Web Order system.</inlineHelpText>
        <label>Lab Referral Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_based_Scanning__c</fullName>
        <formula>IF ( CONTAINS(Name, &quot;S&quot;), &quot;Yes&quot;, IF(LEFT(Product_Group_HQ__c, 2)=&quot;ID2&quot;, &quot;No&quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATL Lab-based scanning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_quarter_sales__c</fullName>
        <formula>If(CEILING( MONTH ( Invoice_Date__c ) / 3 ) = CEILING( MONTH ( Today() ) / 3 )-1 &amp;&amp;  Year ( Invoice_Date__c ) =Year ( today() ),Tot_Price__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last quarter sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maintenance_Expiry_Date__c</fullName>
        <description>Updated Manually by Leuven</description>
        <inlineHelpText>Set manually by Leuven/SIMPLANT team</inlineHelpText>
        <label>Maintenance Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Moving_Annual_Total__c</fullName>
        <formula>If (AND( (Invoice_Date__c +365) &gt; TODAY(), Invoice_Date__c &lt;=TODAY()), &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Moving Annual Total</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Sales__c</fullName>
        <description>If this field shows a &quot;YES&quot; = My sales, otherwise &quot;NO&quot;. Use this field for filtering and to simulate &quot;My sales&quot; on reports and views</description>
        <formula>IF( Sales_Owner__c  =  $User.Id , &quot;YES&quot;, &quot;NO&quot;)</formula>
        <inlineHelpText>If this field shows a &quot;YES&quot; = My sales, otherwise &quot;NO&quot;. Use this field for filtering and to simulate &quot;My sales&quot; on reports and views</inlineHelpText>
        <label>Is My Sales?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_longer_exist_in_BPW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to be used to identify fields that no longer exist in BPW and therefore should be deleted from SFDC.</description>
        <inlineHelpText>Field to be used to identify fields that no longer exist in BPW and therefore should be deleted from SFDC.</inlineHelpText>
        <label>No longer exist in BPW (HQ)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneSF_Id__c</fullName>
        <formula>Account__r.OneSF_Id__c</formula>
        <label>OneSF Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>This is the Astra Tech order number that this row corresponds to. Note that it is not until the article has been invoiced that the sales history record appears in Salesforce.</description>
        <inlineHelpText>This is the Astra Tech order number that this row corresponds to. Note that it is not until the article has been invoiced that the sales history record appears in Salesforce.</inlineHelpText>
        <label>Order Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <description>Shows the Order Type</description>
        <inlineHelpText>Shows the Order Type</inlineHelpText>
        <label>Order Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Our_Reference__c</fullName>
        <description>Our Reference on the Order/Invoice. Comes from the field OREF in Movex</description>
        <inlineHelpText>Our Reference on the Order/Invoice. Comes from the field OREF in Movex</inlineHelpText>
        <label>Our Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Customer_Group__c</fullName>
        <formula>Payer_Lookup__r.Customer_Group__c</formula>
        <label>Payer Customer Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payer Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales History (Payer Lookup)</relationshipLabel>
        <relationshipName>Sales_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payer_Movex_D_JP__c</fullName>
        <description>Showing the Paying Accounts Movex #.</description>
        <inlineHelpText>Showing the Paying Accounts Movex #.</inlineHelpText>
        <label>Payer ERP # (D-JP)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Name_D_JP__c</fullName>
        <description>Showing the name of the Paying Account.</description>
        <inlineHelpText>Showing the name of the Paying Account.</inlineHelpText>
        <label>Payer Name (D-JP) OLD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Sales_Channel__c</fullName>
        <formula>Payer_Lookup__r.Payer_Customer_Group_D_JP__c</formula>
        <inlineHelpText>Payer Customer Group taken from Payer Account</inlineHelpText>
        <label>Payer Sales Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_D_NA__c</fullName>
        <description>The Project Element field in Movex. For Atlantis orders it refers to the postal code of the clinic from where the lab sales is originating. Only used for Dental lab sales</description>
        <label>Project Element</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prd_Grp_2_Article__c</fullName>
        <formula>Product_Group_2__c  &amp; &quot; / &quot; &amp;  Name</formula>
        <label>Prd Grp 2 / Article</label>
        <type>Text</type>
    </fields>
</CustomObject>